# moltbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  DEVELOPMENT_STATE.md  Dockerfile  LICENSE  README.md  claude-code-config.example.json  content_filter.py  docker-compose.yml  download_model.py  pyproject.toml  rebuild-test.sh  requirements-dev.txt  requirements.txt  server.py  stdio_bridge.py  stdio_server.py
config/: credentials.example.json
dashboard/: Dockerfile
dashboard/api/: auth.py  database.py  main.py  models.py  requirements.txt
dashboard/api/routers/: actions.py  prompts.py  runs.py  security.py  stats.py
dashboard/webapp/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/webapp/src/: App.tsx  vite-env.d.ts
dashboard/webapp/src/api/: client.ts
heartbeat/: README.md  backfill_from_log.py  celticxfer_heartbeat.sh  collect_mcp_logs.py  com.celticxfer.moltbook.heartbeat.plist  config.example.json  fetch_platform_rules.py  mcp-config.json  record_activity.py  run_today.sh  seed_prompt.py
scripts/: backup_db.py  migrate_sqlite_to_pg.py
security review/: SECURITY_REVIEW.md
security-review/: SECURITY_REVIEW.md  SECURITY_REVIEW_v3.md
tests/: __init__.py  conftest.py  test_collect_mcp_logs.py  test_content_filter.py  test_dashboard_api.py  test_dashboard_auth.py  test_fetch_platform_rules.py  test_health.py  test_models.py  test_record_activity.py  test_security_analytics.py  test_server.py
testscript/: check_dnsmasq.sh  get_docker_logs.sh  test_mcp_endpoint.sh
(+13 files in other folders)
